--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,21 +1,22 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.e16din.decidequickly"
-        minSdkVersion 19
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+        vectorDrawables.useSupportLibrary = true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-
     buildTypes {
         debug {
+
         }
         release {
             minifyEnabled false
@@ -23,36 +24,26 @@ android {
         }
     }
 
-    compileOptions {
-        targetCompatibility 1.8
-        sourceCompatibility 1.8
-    }
-}
-
-androidExtensions {
-    experimental = true
-}
-
-kotlin {
-    experimental {
-        coroutines "enable"
+    androidExtensions {
+        experimental = true
     }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:0.22.5" // Apache 2.0
-
-    implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-
-    implementation 'com.github.e16din:DataManager:0.5.3' // MIT
-
+    implementation "com.android.support:appcompat-v7:$ver_support"
+//    implementation "com.android.support:design:$ver_support"
+    implementation "com.android.support:recyclerview-v7:$ver_support"
+    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.19.0'
+    kapt 'com.github.e16din:screensadapter-compiler:0.8.15'
+    implementation 'com.github.e16din:screensadapter:0.8.15'
+    implementation 'com.github.e16din:screensadapter-annotation:0.8.15'
+
+    implementation 'com.github.e16din:datamanager:0.6.0'
 }
